fixed image alignment

--- a/assets/scss/card.scss
+++ b/assets/scss/card.scss
@@ -55,6 +55,7 @@
   max-width: 18rem;
   border-radius: 8px;
   margin: 1rem;
+  align-self: center;
 }
 
 /* Content inside the card */
